--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-plugin-babel": "^3.0.1",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
+    "@vue/eslint-config-prettier": "^3.0.3",
     "@vue/eslint-config-standard": "^3.0.3",
     "lint-staged": "^7.2.2",
     "node-sass": "^4.9.0",
