--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
   //安装eslint,stylelint,prettier插件
   "editor.formatOnSave": false,
+  "[scss]":{
+    "editor.formatOnSave": true
+  },
+  "[css]":{
+    "editor.formatOnSave": true
+  },
   "prettier.eslintIntegration": true,
   "prettier.stylelintIntegration": true,
   "eslint.autoFixOnSave": true,
