--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     ],
     "*.vue": [
       "vue-cli-service lint",
+      "stylelint --fix ./src/**/*.vue",
       "git add"
     ],
-    ".{vue,css,scss,sass,less}":[
-      "stylelint --fix **/*.{vue,css,scss,sass,less}"
+    ".{css,scss}":[
+      "stylelint --fix ./src/**/*.{css,scss}"
     ]
   }
 }
