--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "stylelint --fix ./src/**/*.vue",
       "git add"
     ],
-    ".{css,scss}":[
+    "*.{css,scss}":[
       "stylelint --fix ./src/**/*.{css,scss}"
     ]
   }
