--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       "git add"
     ],
     "*.scss":[
-      "stylelint --fix ./src/**/*.scss"
+      "stylelint --fix './src/**/*.scss'"
     ]
   }
 }
