--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,4 +1,5 @@
 {
+  "ignoreFiles": ["**/*.js"],
   "extends": ["stylelint-config-standard", "stylelint-config-recommended-scss"],
   "plugins": ["stylelint-scss", "stylelint-order"],
   "rules": {
