--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "stylelint --fix ./src/**/*.vue && vue-cli-service lint"
   },
   "dependencies": {
     "vue": "^2.5.17",
