--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "npm run build:server && mv dist/vue-ssr-server-bundle.json bundle && npm run build:client && mv bundle dist/vue-ssr-server-bundle.json",
+    "build:client": "vue-cli-service build",
+    "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
+    "server": "node ./build_scripts/server.js",
     "lint": "stylelint --fix ./src/**/*.vue && vue-cli-service lint"
   },
   "dependencies": {
@@ -16,7 +19,9 @@
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
     "@vue/eslint-config-standard": "^3.0.3",
+    "cross-env": "^5.2.0",
     "lint-staged": "^7.2.2",
+    "lodash": "^4.17.11",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "stylelint": "^9.5.0",
@@ -26,7 +31,9 @@
     "stylelint-order": "^1.0.0",
     "stylelint-processor-html": "^1.0.0",
     "stylelint-scss": "^3.3.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-server-renderer": "^2.5.17",
+    "vue-template-compiler": "^2.5.17",
+    "webpack-node-externals": "^1.7.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
