--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "stylelint --fix ./src/**/*.vue && vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
