--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build:client": "vue-cli-service build",
     "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
     "server": "node ./build_scripts/server.js",
+    "console": "vue ui",
     "lint": "stylelint --fix ./src/**/*.vue && vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "nodemon": "^1.18.4",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
